<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <TextView
        android:id="@+id/text_header_reply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_header_reply"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_message_reply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_header_reply" />

    <Button
        android:id="@+id/button_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:onClick="countUp"
        android:text="@string/button_label_count"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/show_count"
        android:layout_width="412dp"
        android:layout_height="299dp"
        android:background="#FFFF00"
        android:gravity="center_vertical"
        android:text="@string/count_init_value"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="80dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="608dp"
        android:onClick="launchSecondActivity"
        android:text="@string/send_button"
        app:layout_constraintBottom_toBottomOf="@+id/button_count"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editText_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="560dp"
        android:ems="10"
        android:hint="@string/input_hint"
        android:inputType="textLongMessage"
        app:layout_constraintBottom_toTopOf="@+id/button_count"
        app:layout_constraintEnd_toStartOf="@+id/button_main"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_goImplicit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="28dp"
        android:onClick="openImplicitPage"
        android:text="Open apps"
        app:layout_constraintBottom_toTopOf="@+id/show_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_apis"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_async"
        android:layout_width="202dp"
        android:layout_height="37dp"
        android:layout_marginTop="64dp"
        android:text="@string/not_doing_async_text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintStart_toEndOf="@+id/button_goImplicit"
        app:layout_constraintTop_toBottomOf="@+id/button_main" />

    <Button
        android:id="@+id/button_async"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="54dp"
        android:onClick="startTask"
        android:text="async"
        app:layout_constraintBottom_toTopOf="@+id/show_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintStart_toEndOf="@+id/button_goImplicit"
        app:layout_constraintTop_toBottomOf="@+id/text_async"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_apis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:onClick="goToApis"
        android:text="Use Books API"
        app:layout_constraintBottom_toTopOf="@+id/show_count"
        app:layout_constraintEnd_toStartOf="@+id/button_async"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>